test_src/compiler_errors/types/binary/OrBoolError4.b
class OrBoolError4 {
    void test() {
        var value = true;
        println(value |= 6);
    }
}
